Fix nav on mobile

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -124,6 +124,7 @@ img {
 
 #webnavbar {
     width: 100%;
+    padding-bottom: 5px;
 }
 
 img {
